# solar

./: .gitignore  Makefile  README.md  project-context.md  pyproject.toml  scratch_lp_test.py
_bmad-output/implementation-artifacts/: 1-1-initialize-ccds-data-science-architecture.md  1-2-standardize-raw-input-profiles-to-parquet.md  1-3-execute-baseline-orchestration-loop.md  2-1-pvlib-array-generation-module.md  3-1-fcr-dynamic-capacity-bounds-allocation.md  3-2-battery-soc-sequential-mathematical-loop.md  3-3-intraday-price-arbitrage-logic.md  4-1-main-fuse-transmission-limits.md  4-2-grid-flow-and-curtailment-vector-truncation.md  5-2-skattereduktion-tax-rebate-dynamic-capping.md  ccr-acceptance-auditor.md  ccr-blind-hunter.md  ccr-edge-case-hunter.md  deferred-work.md  review-diff.patch  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  solar-prd-validation-report.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: data-sources.md  solar-prd.md
notebooks/: 01-baseline-walkthrough.ipynb  02-fetch-external-data.ipynb  03-pv-configuration-comparison.ipynb  04-battery-impact-analysis.ipynb  05-config-sensitivity-analysis.ipynb
src/solar/: config.py  simulation.py
src/solar/data/: loader.py
src/solar/models/: battery_logic.py  grid_finance.py  (+1 more)
tests/: test_simulation.py
tests/data/: test_loader.py
tests/models/: test_battery_logic.py  test_battery_loop.py  test_grid_finance.py  test_grid_finance_economics.py  test_pv_generation.py  test_tax_logic.py
