[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solar"
version = "0.1.0"
description = "CCDS Data Science Architecture"
readme = "README.md"
authors = [
    {name = "Sergei"},
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pvlib>=0.10.0",
    "pytz",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["solar*"]
